# cossistant

./: .env.example  .gitignore  .tinyb  AGENTS.md  CHANGESETS_QUICKSTART.md  CLAUDE.md  DISCOUNT_TROUBLESHOOTING.md  Dockerfile.api  Dockerfile.rag  Dockerfile.workers  README.md  RELEASE.md  SELF_HOST_NOTES.md  biome.jsonc  docker-compose.yml  findings.md  package.json  progress.md  task_plan.md  turbo.json
.changeset/: 1766523017549-release.md  1766529292000-release.md  1770984026027-facehash.md  1770984124625-facehash.md  README.md  config.json  curvy-chefs-add.md  curvy-jeans-drop.md  initial-release.md  patch-release.md  release-0-0-4.md  release-0-0-5.md  release-0-0-6.md  release-all-packages.md  test-0-0-3.md  test-release.md
.cursor/rules/: package-release.mdc  react-package-rules.mdc
.github/: changeset-version.js  generate-release-notes.js  version-script-beta.js  version-script-next.js
.github/workflows/: ci.yml  deploy-schema-drizzle.yml  pr-tests.yml  prerelease-comment.yml  prerelease.yml  release-prepare.yml  release.yml
.husky/: pre-commit  pre-push
apps/api/: .env.default  .gitignore  drizzle.config.ts  (+3 more)
apps/rag/: pyproject.toml  requirements.txt
apps/rag/src/: __init__.py  config.py  main.py
apps/rag/src/api/routes/: __init__.py  chunk.py  health.py
apps/rag/src/services/: __init__.py  chunker.py  embedder.py
docs/: CHANGESETS_WORKFLOW.md  markdown-link-check.json  package-release.md  rag.md
examples/: .gitkeep  README.md
scripts/: prepare-package.ts
tinybird/: .env.example  .gitignore  .tinyb  README.md  package.json
(+963 files in other folders)
