[project]
name = "cossistant-rag"
version = "0.1.0"
description = "RAG chunking service for Cossistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "llama-index>=0.12.0",
    "llama-index-core>=0.12.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]



